# aura-sensor-fusion

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_memory_pool.cpp  bench_ring_buffer.cpp  bench_thread_pool.cpp
cmake/: aura-config.cmake.in
docs/: architecture.md  phases.md
examples/: CMakeLists.txt  basic_pipeline.cpp  sensor_simulation.cpp
include/aura/: aura.hpp
include/aura/concurrency/: lock_free_ring_buffer.hpp  thread_pool.hpp
include/aura/core/: logging.hpp  memory_pool.hpp  timestamp.hpp  types.hpp
include/aura/filters/: extended_kalman_filter.hpp  kalman_filter.hpp  particle_filter.hpp  unscented_kalman_filter.hpp
include/aura/fusion/: data_association.hpp  fusion_concepts.hpp  fusion_node.hpp  pipeline_coordinator.hpp
include/aura/math/: matrix.hpp
include/aura/sensors/: sensor_base.hpp  sensor_data.hpp  sensor_traits.hpp
include/aura/utils/: profiler.hpp
src/concurrency/: thread_pool.cpp
src/core/: logging.cpp  memory_pool.cpp  timestamp.cpp  types.cpp
src/fusion/: fusion_node.cpp
src/sensors/: sensor_base.cpp
src/utils/: profiler.cpp
tests/: CMakeLists.txt
tests/integration/: test_pipeline.cpp
tests/unit/: test_data_association.cpp  test_ekf.cpp  test_kalman_filter.cpp  test_memory_pool.cpp  test_particle_filter.cpp  test_pipeline_coordinator.cpp  test_ring_buffer.cpp  test_sensors.cpp  test_thread_pool.cpp  test_timestamp.cpp  test_types.cpp  test_ukf.cpp
